--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Streamdata.io API Gallery - google-classroom
+title: Streamdata.io API Gallery - Google Classroom
 ---
 
 {% assign listing_object = site.listings %}
